# Getman-Postman-Clone

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: rust.yml
docs/: ARCHITECTURE.md  TROUBLESHOOTING.md  USER_GUIDE.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CollectionsSidebar.tsx  EnvironmentBar.tsx  KeyValueEditor.tsx  RequestBuilder.tsx  ResponseViewer.tsx  ToolsPanel.tsx
src/lib/: exporters.ts  factory.ts  http.ts  json.tsx  storage.ts  tools.ts  variables.ts
src/store/: workspace.ts
src/types/: api.ts
work/cargo-home/: .global-cache
work/cargo-home/registry/cache/index.crates.io-1949cf8c6b5b557f/: alloc-stdlib-0.2.4.crate  brotli-8.0.4.crate  brotli-decompressor-5.0.3.crate  bytes-1.12.0.crate  camino-1.2.3.crate  cc-1.2.65.crate  http-1.4.2.crate  hyper-1.10.1.crate  mio-1.2.1.crate  muda-0.19.3.crate  serde_with-3.21.0.crate  serde_with_macros-3.21.0.crate  socket2-0.6.4.crate  tao-0.35.3.crate  tauri-2.11.3.crate  tauri-build-2.6.3.crate  tauri-codegen-2.6.3.crate  tauri-macros-2.6.3.crate  tauri-plugin-2.6.3.crate  tauri-runtime-2.11.3.crate  tauri-runtime-wry-2.11.3.crate  tauri-utils-2.9.3.crate  time-0.3.49.crate  time-core-0.1.9.crate  time-macros-0.2.29.crate  tray-icon-0.24.1.crate  typenum-1.20.1.crate  uuid-1.23.3.crate  web_atoms-0.2.5.crate
