[package]
name = "getman"
version = "0.1.0"
description = "Getman offline-first API testing desktop app"
authors = ["Getman"]
edition = "2021"

[lib]
name = "getman_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
